<resources>
    <string name="app_name">SmartPills</string>

    <string name="main_activity_description">Simplifiez vous la santé</string>

    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Discute avec un mentor</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_channel_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="todo">TODO</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="revenir_a_l_ecran_de_connexion">Revenir à l\'écran de connexion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Drawer -->
    <string name="profil">Profil</string>
    <string name="home">Home</string>
    <string name="notification_channel_desc">\"Description\"</string>

    <string name="ajouter_un_pilulier">Ajouter un pilulier</string>
    <string name="retour">Retour</string>

    <string name="aucun_pilulier">Aucun pilulier ajouté</string>
    <string name="valider">Valider</string>
    <string name="mot_de_passe_smartpills">Mot de passe SmartPills</string>
    <string name="smartpills_id">Smartpills ID</string>
    <string name="mesPiluliers">Mes piluliers</string>
    <string name="connect_pilulier">Connectez un pilulier SmartPills à l\'application</string>
    <string name="a_jour">A jour</string>
    <string name="phoneNumber">Numéro de téléphone</string>


</resources>