<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- IMAGE VIEW SMARTPILLS -->
    <ImageView
        android:layout_width="109dp"
        android:layout_height="112dp"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/ic_icon" />

    <!-- TITLE -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/default_title_size"
        android:textStyle="bold"
        tools:text="SmartPills" />

    <!-- DESCRIPTION  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/main_activity_description"
        android:textSize="@dimen/default_text_size"
        tools:text="Simplifiez vous la santé" />

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_large_margin"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/loginButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_large_margin"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />


    </LinearLayout>

</LinearLayout>
