<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="center">

            <!-- FIREBASE IMAGE -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="137dp"
                android:layout_height="137dp"
                android:background="@drawable/ic_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- PROGRESS BAR -->

            <!-- PROFILE IMAGE -->

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- PROFILE USERNAME -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Saisissez votre nouveau nom d'utilisateur"
            android:textSize="@dimen/default_text_size" />

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:paddingStart="@dimen/default_margin"/>

        </LinearLayout>

        <!-- CHECKBOX IS USER MENTOR -->


    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_account"
            style="@style/ValidateButtonTheme"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"/>

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"/>

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_error_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"/>

    </LinearLayout>

</LinearLayout>