<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#FFFFFF"
    style="@style/AppTheme"
    tools:context=".activities.HomeScreenActivity"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="59dp">

            <TextView
                android:id="@+id/noPilulierText"
                android:layout_width="340dp"
                android:layout_height="84dp"
                android:text="@string/aucun_pilulier"
                android:textAlignment="center"
                android:textColor="#757575"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.422"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PiluliersLayout"
                android:layout_width="412dp"
                android:layout_height="593dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/mesPiluliersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mesPiluliers"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/pilulier_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.064"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.312" />

                <ExpandableListView
                    android:id="@+id/pilulier_list"
                    android:layout_width="373dp"
                    android:layout_height="518dp"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.616"
                    app:layout_goneMarginBaseline="15dp"
                    app:layout_goneMarginBottom="15dp"
                    app:layout_marginBaseline="15dp"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_main"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonAddPilulier"

                style="@style/ValidateButtonTheme"
                android:layout_width="235dp"
                android:layout_height="51dp"
                android:text="@string/ajouter_un_pilulier"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PiluliersLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>